# DSC180A-Sarah

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
data/: .gitignore
data/raw/: call-center-data-v2-daily-hoo.csv  call-center-data-v2-daily.csv  call-center-data-v3-daily.csv  intraday-profiles.csv
docs/: .lycheeignore  Gemfile  _config.yml  data.md  index.md  modeling.md  overview.md  results.md  tech_stack.md
notebooks/: EDA.ipynb  ErlangC Headcount.ipynb  Modeling.ipynb
scripts/: __init__.py  run_pipeline.py
src/main_module/: __init__.py  logging.py
src/main_module/data/: __init__.py  load_data.py  preprocess.py
src/main_module/modeling/: __init__.py  evaluate.py  predict.py  train.py
src/main_module/utils/: __init__.py  io.py  time.py
src/main_module/visualization/: plots.py
tests/unit/: test_load_data.py  test_modeling.py  test_process_data.py
